--- a/app/views/revision/show.rhtml
+++ b/app/views/revision/show.rhtml
@@ -1,29 +1,5 @@
-<h1>
-  <%= link_to(@project.name, :controller => "project", :action => "edit", :id => @project.id) %> 
-  revision <%= @revision.label %>
-</h1>
-<p>
-<% unless @revision.builds.empty? %>
-  Builds:
-  <% @revision.builds.each do |build| %>
-    <%= link_to(build.create_time,
-    	:controller => "build", :action => "show", :id => build.id
-    ) %>
-  <% end %>
-<% end %>
-</p>
-<div id="request-build">
-  <%= link_to_remote(
-  	"Request build(s) for this revision",
-  	:url => {:controller => "revision", :action => "build", :id => @revision.id},
-  	:update => "request-build"
-  ) %>
-</div>
-
 <div class="revision-summary">
-  <b><%= @revision.developer %></b>
-  (<%= @revision.timepoint %>)<br/>
-  <%= textilize(@revision_message) %>
+  <%= textilize(@revision_message).strip %>
 </div>
 
 <table>
@@ -62,28 +38,6 @@
   %>
     <tr>
       <% if(@project.scm_web.nil?) %>
-        <td><%= file.native_revision_identifier %></td>
-      <% else %>
-        <td>
-          <%= 
-            content_tag(
-              "a", 
-              file.native_revision_identifier, 
-              {
-                :href=> revision_url,
-                :title => case(file.status)
-                  when "ADDED" then added_rev_tip
-                  when "MODIFIED" then modified_rev_tip
-                  when "MOVED" then moved_rev_tip
-                  when "DELETED" then deleted_rev_tip
-                end
-              }
-            )
-          %>
-        </td>
-      <% end %>
-
-      <% if(@project.scm_web.nil?) %>
         <td><%= image_tag(file.icon, :size => "16x16", :title => file.status_description) %></td>
       <% else %>
         <td>
@@ -117,6 +71,28 @@
       <% end %>
 
       <% if(@project.scm_web.nil?) %>
+        <td><%= file.native_revision_identifier %></td>
+      <% else %>
+        <td>
+          <%= 
+            content_tag(
+              "a", 
+              file.native_revision_identifier, 
+              {
+                :href=> revision_url,
+                :title => case(file.status)
+                  when "ADDED" then added_rev_tip
+                  when "MODIFIED" then modified_rev_tip
+                  when "MOVED" then moved_rev_tip
+                  when "DELETED" then deleted_rev_tip
+                end
+              }
+            )
+          %>
+        </td>
+      <% end %>
+
+      <% if(@project.scm_web.nil?) %>
         <td><%= file.path %></td>
       <% else %>
         <td>
@@ -135,3 +111,10 @@
     </tr>
   <% end %>
 </table>
+<div id="request-build">
+  <%= link_to_remote(
+  	"Request build(s) for this revision",
+  	:url => {:controller => "revision", :action => "build", :id => @revision.id},
+  	:update => "request-build"
+  ) %>
+</div>
