--- a/branches/damagecontrol_active_record/app/views/project/timeline.rhtml
+++ b/branches/damagecontrol_active_record/app/views/project/timeline.rhtml
@@ -7,7 +7,17 @@
 
     <% revision.builds.reverse.each do |build| build_detail_id = "build_#{build.id}_detail" %>
       <div>
-        <%= toggle_link_to_remote(build.state.class.name, build_detail_id, "build", "show", build.id) %>
+        <% 
+          build_state = build.state ? build.state.class.name.demodulize.underscore.gsub(/_/, ' ') : 'pending' 
+          time = (build.begin_time ? build.begin_time : build.create_time).strftime("%H:%M")
+        %>
+        <%= time %>
+        <%= toggle_link_to_remote(
+          "#{image_tag(build.icon, :size=>'16x16')} #{build.number} (#{build_state})", 
+          build_detail_id, 
+          "build", 
+          "show", 
+          build.id) %>
       </div>
       <div id="<%= build_detail_id %>"></div>
     <% end %>
