--- a/branches/damagecontrol_active_record/app/views/revision/show.rhtml
+++ b/branches/damagecontrol_active_record/app/views/revision/show.rhtml
@@ -123,7 +123,7 @@
 <div id="request-build">
   <%= link_to_remote(
   	"Request build(s) for this revision",
-  	:url => {:controller => "revision", :action => "build", :id => @revision.id},
+  	:url => {:controller => "revision", :action => "request_build", :id => @revision.id},
   	:update => "request-build"
   ) %>
 </div>
