--- a/app/views/project/_summary.rhtml
+++ b/app/views/project/_summary.rhtml
@@ -1,9 +1,9 @@
-<%
-link = {:controller => "project", :action => "edit", :id => project.id}
-if(project.latest_revision)
-  link = {:controller => "revision", :action => "show", :id => project.latest_revision.id}
-end
-%>
-<div class="project-summary">
-  <%= build_link(project.latest_build) %> <%= link_to(project.name, link) %>
-</div>
+<%= link_to project.name, :controller => "project", :action => "show", :id => project.id %>
+
+<% if project.latest_build %>
+  <%= build_inline_link(project.latest_build) %>
+<% end %>
+<br/>
+<% if(project.latest_revision) %>
+  <%= revision_inline_link(project.latest_revision) %>
+<% end %>
