--- a/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
+++ b/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
@@ -19,16 +19,17 @@
   ) %>
 </head>
 <body>
-  <div id="banner">
-    <p>
+  <div id="general-menu">
     <%= link_to "New Project", :controller => "project", :action => "new" %>
   | <%= link_to "Artifacts", :controller => "file_system", :action => "browse" %>
-    <% if(@project) %>
-      | <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
-    <% end %>
   | <%= link_to "Documentation", :controller => "doc", :action => "index" %>
-    </p>
   </div>
+
+  <% if(@project) %>
+    <div id="project-menu">
+      <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
+    </div>
+  <% end %>
 
   <div>
     <% if @flash["notice"] %>
