made sound player optional

--- a/app/views/publisher/_publisher.rhtml
+++ b/app/views/publisher/_publisher.rhtml
@@ -1,6 +1,6 @@
 <%= 
   link_to_remote(
-    "Test #{object.visual_name}",
+    "Test #{object.visual_name} with a sample successful build",
     {
       :submit => "project_settings",
       :update => "#{object.dom_id}_publisher_test_result",
