--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -19,23 +19,17 @@
   ) %>
 </head>
 <body>
-  <div id="general-menu">
-    <%= link_to "New Project", :controller => "project", :action => "new" %>
+  <div class="general-menu">
+    <%= link_to "All projects", :controller => "project", :action => "list" %>
+  | <%= link_to "New project", :controller => "project", :action => "new" %>
   | <%= link_to "Artifacts", :controller => "file_system", :action => "browse" %>
   | <%= link_to "Documentation", :controller => "doc", :action => "index" %>
   </div>
-
-  <% if(@project) %>
-    <div id="project-menu">
-      <%= link_to "RSS", :controller => "project", :action => "rss", :id => @project.id %>
-    </div>
-  <% end %>
 
   <div>
     <% if @flash["notice"] %>
       <div class="notice"><%= @flash["notice"] %></div>
     <% end %>
-    <h1><%= @page_title %></h1>
     <%= @content_for_layout %>
   </div>
 
