--- a/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
+++ b/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
@@ -10,7 +10,7 @@
     <%= auto_discovery_link_tag(feed.type, feed.url_options, {:title => feed.title}) %>
   <% end %>
 	
-  <%= stylesheet_link_tag("style.css", "diff.css", "undohtml.css") %>
+  <%= stylesheet_link_tag("style.css", "undohtml.css") %>
   <%= javascript_include_tag(
     "prototype",
     "effects",
