--- a/branches/damagecontrol_active_record/app/views/publisher/_publisher.rhtml
+++ b/branches/damagecontrol_active_record/app/views/publisher/_publisher.rhtml
@@ -36,5 +36,9 @@
       <td>Executing</td>
       <td><%= enabling_state_tag(object, "Build::Executing") %></td>
     </tr>
+    <tr>
+      <td>Updating Working Copy</td>
+      <td><%= enabling_state_tag(object, "Build::UpdatingWorkingCopy") %></td>
+    </tr>
   </table>
 </div>
