--- a/app/views/publisher/_sound.rhtml
+++ b/app/views/publisher/_sound.rhtml
@@ -51,5 +51,14 @@
         </select>
       </td>
     </tr>
+
+    <tr>
+      <td>Updating Working Copy</td>
+      <td>
+        <select name="publisher[DamageControl::Publisher::Sound][updating_working_copy_sound]">
+          <%= options_for_select(DamageControl::Publisher::Sound.files, object.updating_working_copy_sound) %>
+        </select>
+      </td>
+    </tr>
   </tbody>
 </table>
