better error message for trigger failures and fixed bad sound settings

--- a/app/views/publisher/_publisher.rhtml
+++ b/app/views/publisher/_publisher.rhtml
@@ -37,8 +37,8 @@
       <td><%= enabling_state_tag(object, "Build::Executing") %></td>
     </tr>
     <tr>
-      <td>Updating Working Copy</td>
-      <td><%= enabling_state_tag(object, "Build::UpdatingWorkingCopy") %></td>
+      <td>Synching Working Copy</td>
+      <td><%= enabling_state_tag(object, "Build::SynchingWorkingCopy") %></td>
     </tr>
   </table>
 </div>
