--- a/app/views/publisher/_sound.rhtml
+++ b/app/views/publisher/_sound.rhtml
@@ -53,10 +53,10 @@
     </tr>
 
     <tr>
-      <td>Updating Working Copy</td>
+      <td>Synching Working Copy</td>
       <td>
-        <select name="publisher[DamageControl::Publisher::Sound][updating_working_copy_sound]">
-          <%= options_for_select(DamageControl::Publisher::Sound.files, object.updating_working_copy_sound) %>
+        <select name="publisher[DamageControl::Publisher::Sound][synching_working_copy_sound]">
+          <%= options_for_select(DamageControl::Publisher::Sound.files, object.synching_working_copy_sound) %>
         </select>
       </td>
     </tr>
