--- a/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
+++ b/branches/damagecontrol_active_record/app/views/layouts/application.rhtml
@@ -30,6 +30,8 @@
     <% if @flash["notice"] %>
       <div class="notice"><%= @flash["notice"] %></div>
     <% end %>
+    <div id="search"><%= render :partial => "shared/search" %></div>
+    <div id="search-results"></div>
     <%= @content_for_layout %>
   </div>
 
