--- a/branches/damagecontrol_active_record/app/views/revision/show.rhtml
+++ b/branches/damagecontrol_active_record/app/views/revision/show.rhtml
@@ -2,124 +2,6 @@
   <%= textilize(@revision_message).strip %>
 </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Revision</th><th>Diff</th><th>History</th>
-    </tr>
-  </thead>
-  <tbody>
-  <%
-  @revision.revision_files.each_with_index do |file, i|
-    full_path = @project.scm.scm_web_path(file)
-
-    overview_url = @project.scm_web.history(
-      full_path
-    )
-
-    revision_url = @project.scm_web.html(
-      full_path, 
-      file.native_revision_identifier
-    )
-
-    diff_url = @project.scm_web.diff(
-      full_path, 
-      file.native_revision_identifier,
-      file.previous_native_revision_identifier
-    )
-    
-    # status         revision id            icon                path
-    # ----------------------------------------------------------------------
-    # added          Show new file          Show added rev X    Show history
-    # modified       Show modified file     Show diff           Show history
-    # moved          Show moved file        Show diff           Show history
-    # deleted        Show deleted file      Show deleted rev X  Show history
-
-    added_rev_tip = "Show new file"
-    modified_rev_tip = "Show revision #{file.native_revision_identifier} (modified file)"
-    moved_rev_tip = "Show revision #{file.native_revision_identifier} (moved file)"
-    deleted_rev_tip = "Show revision #{file.native_revision_identifier} (removed file)"
-    diff_tip = "Show diff"
-    history_tip = "Show history"
-  %>
-
-    <tr>
-      <% if(@project.scm_web.nil?) %>
-        <td><%= image_tag(file.icon, :size => "16x16", :title => file.status_description) %></td>
-      <% else %>
-        <td>
-          <%= 
-            content_tag(
-              "a", 
-              image_tag(
-                file.icon, 
-                {
-                  :size => "16x16", 
-                  :title => case(file.status)
-                    when "ADDED" then added_rev_tip
-                    when "MODIFIED" then diff_tip
-                    when "MOVED" then diff_tip
-                    when "DELETED" then deleted_rev_tip
-                  end,
-                  :border=>"0"
-                }
-              ), 
-              {
-                :href => case(file.status)
-                  when "ADDED" then revision_url
-                  when "MODIFIED" then diff_url
-                  when "MOVED" then diff_url
-                  when "DELETED" then revision_url
-                end
-              }
-            ) 
-          %>
-        </td>
-      <% end %>
-
-      <% if(@project.scm_web.nil?) %>
-        <td><%= file.native_revision_identifier %></td>
-      <% else %>
-        <td>
-          <%= 
-            content_tag(
-              "a", 
-              file.native_revision_identifier, 
-              {
-                :href=> revision_url,
-                :title => case(file.status)
-                  when "ADDED" then added_rev_tip
-                  when "MODIFIED" then modified_rev_tip
-                  when "MOVED" then moved_rev_tip
-                  when "DELETED" then deleted_rev_tip
-                end
-              }
-            )
-          %>
-        </td>
-      <% end %>
-
-      <% if(@project.scm_web.nil?) %>
-        <td><%= file.path %></td>
-      <% else %>
-        <td>
-          <%= 
-            content_tag(
-              "a", 
-              file.path, 
-              {
-                :href => overview_url,
-                :title => history_tip
-              }
-            ) 
-          %>
-        </td>
-      <% end %>
-
-    </tr>
-  <% end %>
-  <tbody>
-</table>
 <div id="request-build-<%= @revision.id %>">
   <%= link_to_remote(
   	"Request build(s) for this revision",
@@ -128,3 +10,12 @@
     :complete => "Effect.Pulsate('request-build-#{@revision.id}')"
   ) %>
 </div>
+
+<table>
+  <thead>
+    <%= render :partial => "revision_file_header" %>
+  </thead>
+  <tbody>
+    <%= render :partial => "revision_file", :collection => @revision_files %>
+  <tbody>
+</table>
