improved ferret indexing

--- a/app/views/search/query.rhtml
+++ b/app/views/search/query.rhtml
@@ -2,7 +2,7 @@
   <h3>Searched for <em>"<%=h @search %>"</em></h3>
   <ul>
   <% @results.each do |result| %>
-    <li><a href="#"><%= result["path"] %><%= result["path"] %></a></li>
+    <li><a href="#"><%= result["path"] %></a></li>
   <% end -%>
 	</ul>
 <% else %>
