--- a/app/views/revision_file/_overview.rhtml
+++ b/app/views/revision_file/_overview.rhtml
@@ -1,4 +1,6 @@
 <%
+  revision_file = overview # The rendered object carries the name of this file - which is awkward here.
+
   project = revision_file.revision.project
   full_path = project.scm.scm_web_path(revision_file)
 
@@ -32,9 +34,9 @@
   history_tip = "Show history"
 %>
 
-  <tr>
+  <div>
     <% if(project.scm_web.nil?) %>
-      <td><%= image_tag(revision_file.icon, :size => "16x16", :title => revision_file.status_description) %></td>
+      <td><%= image_tag(revision_file.icon, :size => "16x16", :title => revision_file.status_description) %></span>
     <% else %>
       <td>
         <%= 
@@ -63,11 +65,11 @@
             }
           ) 
         %>
-      </td>
+      </span>
     <% end %>
 
     <% if(project.scm_web.nil?) %>
-      <td><%= revision_file.native_revision_identifier %></td>
+      <td><%= revision_file.native_revision_identifier %></span>
     <% else %>
       <td>
         <%= 
@@ -85,11 +87,11 @@
             }
           )
         %>
-      </td>
+      </span>
     <% end %>
 
     <% if(project.scm_web.nil?) %>
-      <td><%= revision_file.path %></td>
+      <td><%= revision_file.path %></span>
     <% else %>
       <td>
         <%= 
@@ -102,7 +104,7 @@
             }
           ) 
         %>
-      </td>
+      </span>
     <% end %>
 
-  </tr>
+  </div>
