--- a/app/views/shared/_object.rhtml
+++ b/app/views/shared/_object.rhtml
@@ -1,7 +1,7 @@
 <table>
   <% 
     object.to_yaml_properties.each do |attr_name| 
-      unless default_render_excludes.index(attr_name[1..-1].to_sym)
+      unless default_render_excludes.index(attr_name[1..-1].to_sym) || object.instance_variable_get(attr_name).is_a?(Hash)
   %>
     <tr>
       <td><%= description(object.class, attr_name) %></td>
