--- a/app/views/build_result_mailer/build_result.rhtml
+++ b/app/views/build_result_mailer/build_result.rhtml
@@ -1,8 +1,8 @@
 <html>
   <h2><%= @headline %></h2>
-  <h2>stdout (tail)</h2>
+  <h2>tail -f stdout.log</h2>
   <pre><%= @stdout_tail %></pre>
-  <h2>stderr (tail)</h2>
+  <h2>tail -f stderr.log</h2>
   <pre><%= @stderr_tail %></pre>
   <h2>Changed files:</h2>
   <ul>
