Modified revision history to be an M:N relationship between scm_file and revision. This is necessary in order to build a better SCM browser, as well as adding metrics to files (coming later)

--- a/app/views/build_result_mailer/build_result.rhtml
+++ b/app/views/build_result_mailer/build_result.rhtml
@@ -6,7 +6,7 @@
   <pre><%= @stderr_tail %></pre>
   <h2>Changed files:</h2>
   <ul>
-    <% @build.revision.revision_files.each do |file| %>
+    <% @build.revision.scm_files.each do |file| %>
       <li><%= file.path %></li>
     <% end %>
   </ul>
