--- a/app/views/revision/show.rhtml
+++ b/app/views/revision/show.rhtml
@@ -11,5 +11,5 @@
   ) %>
 </div>
 
-<%= render :partial => "revision_file/header" %>
-<%= render :partial => "revision_file/overview", :collection => @revision_files %>
+<%= render :partial => "scm_file/header" %>
+<%= render :partial => "scm_file/overview", :collection => @scm_files %>
